Git Tests/force-app/main/default/default/objects/QuoteItem__c/QuoteItem__c.object-meta.xml
<CustomObject>
    <description>
        Objeto recebido na integração do portal de cotações (class: IntegrationPortalQuoteIN) e
        utilizado para armazenar as requisições de produtos efetuada pelos clientes,
        assim como a resposta efetuada pelos vendedores.
        Sua estrutura a nível de negócio existe de duas formas:
        1. a nível de item, sendo o item entendido como as informações advindas da integração com a requisição do cliente.
        2. a nível de resposta, sendo a resposta entendida como as informações enviadas do vendedor para o cliente como resposta.
        Esse objeto pode ser visualizado a nível de usuário nas telas de orçamento do tipo portal (Opportunity > RecordType > OrcamentoPortal),
        que é o mestre do relacionamento mestre-detalhe contido nesse objeto.
        O item é enviado ao portal como resposta na integração do portal de cotação (class: IntegrationPortalQuoteOUT).
        E também é enviado quando é efetuado vínculo de produto (class: IntegrationPortalVinculoOUT)
    </description>
    <label>Item da Cotação</label>
    <nameField>
        <label>Nome do Item da Cotação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens da Cotação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>