Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/AnsweredQuote__c.field-meta.xml
<CustomField>
    <fullName>AnsweredQuote__c</fullName>
    <description>Esse campo é usado para validar se o usuário atual tem essa cotação respondida, e então utilizar essa formula com um rollup no objeto Opportunity</description>
    <formula>(ISPICKVAL(Status__c,&apos;Vinculado&apos;) &amp;&amp; !ISBLANK(TEXT(TabulacaoN1__c)) &amp;&amp; !ISPICKVAL(TabulacaoN1__c,&apos;SEM OFERTA&apos;)) ||
	ISPICKVAL(Status__c,&apos;Respondido&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cotação Respondida</label>
    <type>Checkbox</type>
</CustomField>