Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <description>Campo usado para itentificar a categoria do vendedor responsável (advém de setorizacao__c)</description>
    <label>Categoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>