Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/CategoriaCliente__c.field-meta.xml
<CustomField>
    <fullName>CategoriaCliente__c</fullName>
    <description>Recebido do portal via integração a categoria do produto declarada pelo cliente para o produto requisitado.</description>
    <label>Categoria do Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>