Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/CNPJCD__c.field-meta.xml
<CustomField>
    <fullName>CNPJCD__c</fullName>
    <description>Cnpj do centro de distribuição vinculado</description>
    <label>CNPJ do CD</label>
    <length>14</length>
    <type>Text</type>
</CustomField>