Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/CustomerDescription__c.field-meta.xml
<CustomField>
    <fullName>CustomerDescription__c</fullName>
    <description>descrição dada pelo cliente do produto requisitado</description>
    <label>Descrição do Cliente</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>