Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>até o momento (25/09/22) campo não utilizado</description>
    <externalId>true</externalId>
    <label>Id do Cliente</label>
    <length>32</length>
    <type>Text</type>
</CustomField>