Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/CustomerMeasurementUnit__c.field-meta.xml
<CustomField>
    <fullName>CustomerMeasurementUnit__c</fullName>
    <description>Unidade de medida que o cliente trabalha, campo utilizado para conversão (FatorConversao__c)</description>
    <label>Unidade de Medida do Cliente</label>
    <length>32</length>
    <type>Text</type>
</CustomField>