Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/DataHoraResposta__c.field-meta.xml
<CustomField>
    <fullName>DataHoraResposta__c</fullName>
    <description>Quando há alteração do vendedor no item adicionando tabulação ou cotando produto, salva a hora em que acontece</description>
    <label>Data e hora da resposta</label>
    <type>DateTime</type>
</CustomField>