Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>OpportunityId__r.ExternalPortal__c + _ + IdPotal__c + _ + Vendedor__c + _ + Categoria__c</description>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Chave Externa</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>