Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/FatorConversao__c.field-meta.xml
<CustomField>
    <fullName>FatorConversao__c</fullName>
    <description>
        campo utilizado para armazenar o fator de conversão inputado pelo vendedor durante a resposta cotada
        Também pode ser visto como a quantidade presente em caixa caso o valor do TipoConversao__c seja Dividir
    </description>
    <label>Fator de Conversao</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>