Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/FavoriteBrands__c.field-meta.xml
<CustomField>
    <fullName>FavoriteBrands__c</fullName>
    <description>marcas favoritas elencadas pelo cliente na integradora</description>
    <label>Marcas Favoritas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>