Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/IdCustomer__c.field-meta.xml
<CustomField>
    <fullName>IdCustomer__c</fullName>
    <description>Id do produto cadastrado pelo cliente na integradora, usado para identificar mesmo produto em requisições diferentes, juntamente com o AccountId</description>
    <externalId>true</externalId>
    <label>Id do Cliente</label>
    <length>32</length>
    <type>Text</type>
</CustomField>