Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/IdERP__c.field-meta.xml
<CustomField>
    <fullName>IdERP__c</fullName>
    <description>Código do produto no Protheus. (Campo não utilizado 25/09/22)</description>
    <externalId>true</externalId>
    <label>Id do ERP</label>
    <length>32</length>
    <type>Text</type>
</CustomField>