Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/IdIntegrator__c.field-meta.xml
<CustomField>
    <fullName>IdIntegrator__c</fullName>
    <description>Id usado para identificar o item advindo da integradora</description>
    <externalId>true</externalId>
    <label>Id do Integrador</label>
    <length>32</length>
    <type>Text</type>
</CustomField>