Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/IdPortal__c.field-meta.xml
<CustomField>
    <fullName>IdPortal__c</fullName>
    <description>Id do item no Portal de Cotações (hash), não vem da integradora, é criado para cada item dentro do portal.</description>
    <externalId>true</externalId>
    <label>Id do Portal</label>
    <length>32</length>
    <type>Text</type>
</CustomField>