Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/IntegratorMeasurementUnit__c.field-meta.xml
<CustomField>
    <fullName>IntegratorMeasurementUnit__c</fullName>
    <description>Campo está preenchido e vem da integração, mas parece não ser usado.</description>
    <label>Unidade de Medida do Integrador</label>
    <length>32</length>
    <type>Text</type>
</CustomField>