Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>relacionamento mestre detalhe, orçamento, cotação, opportunidade referente ao item.</description>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Itens da Cotação</relationshipLabel>
    <relationshipName>QuoteItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>