Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem__c</fullName>
    <description>
        Quando existe oferta para o QuoteItem__c em questão é criado um OpportunityLineItem com as informações do QuoteItem__c
        Esse item que foi criado fica relacionado por meio desse campo.
    </description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto de oportunidade</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Items da Cotação</relationshipLabel>
    <relationshipName>QuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>