Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <description>
        Quando recebemos a confirmação do orçamento do portal é criado um pedido e seus respectivos itens
        com base nas informações que vem na integração (IntegrationPortalOrderIN) e do que havia no SF no QuoteItem__c
        Esse item do pedido (OrderItem) fica vinculado ao item da cotação por esse campo. 
    </description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto do pedido</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Items da Cotação</relationshipLabel>
    <relationshipName>QuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>