Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/PaymentConditionByDC__c.field-meta.xml
<CustomField>
    <fullName>PaymentConditionByDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de pagamento por CD</label>
    <referenceTo>CondicaoPagamentoPorCD__c</referenceTo>
    <relationshipLabel>Itens da Cotação</relationshipLabel>
    <relationshipName>Itens_cotacao</relationshipName>
    <type>Lookup</type>
</CustomField>