Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/ProdutosVinculadosAnteriormente__c.field-meta.xml
<CustomField>
    <fullName>ProdutosVinculadosAnteriormente__c</fullName>
    <description>JSON de produtos que estavam vinculados a mesma requisição (mesmo IdCustomer__c) em outras cotações.</description>
    <label>Produtos Vinculados Anteriormente</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>