Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/ProgramacaoEntrega__c.field-meta.xml
<CustomField>
    <fullName>ProgramacaoEntrega__c</fullName>
    <description>Informações de entrega requeridas pelo cliente.</description>
    <label>Programacao Entrega</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>