Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantidade de produtos requerida pelo cliente em sua deteminada unidade de medida</description>
    <label>Quantidade</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>