Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/StatusIntegracaoVinculoProdutos__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegracaoVinculoProdutos__c</fullName>
    <description>Status utilizado para verificar a integridade das integrações dessa resposta na class: IntegrationPortalVinculoOUT</description>
    <label>Status Integração - Vínculo de Produtos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Integrado</fullName>
                <default>true</default>
                <label>Não Integrado</label>
            </value>
            <value>
                <fullName>Falha na Integração</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>