Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/StatusIntegrationResponse__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegrationResponse__c</fullName>
    <description>status de integração do item com a integradora, recebido via integraçãoIN com o portal, na classe: IntegrationPortalResponseIN</description>
    <label>StatusIntegrationResponse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Respondido</fullName>
                <default>true</default>
                <label>Não Respondido</label>
            </value>
            <value>
                <fullName>Não Integrado</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>Falha na Integração</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>