Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/TipoConversao__c.field-meta.xml
<CustomField>
    <fullName>TipoConversao__c</fullName>
    <description>Tipo de conversão usada pelo vendedor para transformar a unidade de medida elfa na unidade que o cliente solicitou.</description>
    <label>Tipo de conversão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NENHUMA</fullName>
                <default>true</default>
                <label>NENHUMA</label>
            </value>
            <value>
                <fullName>MULTIPLICAR</fullName>
            </value>
            <value>
                <fullName>DIVIDIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>