Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>Preço elfa para cada unidade ofertada</description>
    <label>Valor Unitário</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>