Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/ValorCx__c.field-meta.xml
<CustomField>
    <fullName>ValorCx__c</fullName>
    <description>Campo não utilizado, atualmente armazena o mesmo valor de FatorConversao__c, 
        mas parece que esse não era o seu propósito original.
    </description>
    <label>Valor (Principal)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>