Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotal__c</fullName>
    <description>UnitPrice__c * Quantity__c</description>
    <label>Valor Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>