Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/ValorUn__c.field-meta.xml
<CustomField>
    <fullName>ValorUn__c</fullName>
    <description>Deveria armazenar o valorPortal, mas não é utilizado, essa informação fica apenas no OpportunityLineItem</description>
    <label>Valor (Secundário)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>