Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <description>
        Vendedor responsável por dar a resposta, advem da setorização, relacionado a VendedorSuporte__c
        Também chamado de VDS ou VDI
    </description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ItensOrcamentosPortal</relationshipName>
    <type>Lookup</type>
</CustomField>