Git Tests/force-app/main/default/default/objects/QuoteItem__c/fields/VendedorRespondeu__c.field-meta.xml
<CustomField>
    <fullName>VendedorRespondeu__c</fullName>
    <description>
        Em alguns casos o vendedor que responde a cotação não é o responsável primário por dar a resposta.
        Esse campo armazena o usuário que efetuou a resposta do item por último.
    </description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor que respondeu</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ItemOrcamentoRespondido</relationshipName>
    <type>Lookup</type>
</CustomField>