Git Tests/force-app/main/default/default/objects/QuoteItem__c/validationRules/BloqueiraDefinirCDSemProduto.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiraDefinirCDSemProduto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(CNPJCD__c)),
ISCHANGED(CNPJCD__c),
ISBLANK(Product__c)
)</errorConditionFormula>
    <errorDisplayField>CNPJCD__c</errorDisplayField>
    <errorMessage>Não é possível selecionar um CD sem vincular um produto.</errorMessage>
</ValidationRule>